--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsc -w",
-    "link-cli": "pnpm unlink --global create-salt-project && pnpm link --global",
+    "link-cli": "rm -rf /home/budi/.local/share/pnpm/global/5 && pnpm link --global",
     "publish-cli": "pnpm publish --access public"
   },
   "keywords": [],
