--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "rm -rf dist && tsc -w",
     "link-cli": "rm -rf /home/budi/.local/share/pnpm/global/5 && pnpm link --global && cp package.json dist/package.json",
-    "publish-cli": "pnpm publish --access public"
+    "publish-cli": "pnpm version patch && pnpm publish --access public"
   },
   "keywords": [],
   "author": "",
