--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "dev": "rm -rf dist && tsc -w",
-    "link-cli": "rm -rf /home/budi/.local/share/pnpm/global/5 && pnpm link --global && cp package.json dist/package.json",
+    "link-cli": "  && pnpm link --global && cp package.json dist/package.json",
     "publish-cli": "pnpm version patch && pnpm publish --access public"
   },
   "keywords": [],
