--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.7",
   "description": "",
   "bin": {
-    "create-salt-project": "./dist/src/index.js"
+    "create-salt-project": "./dist/src/index.js",
+    "salt-project": "./dist/src/index.js",
+    "salt -p": "./dist/src/index.js"
   },
   "main": "./dist/src/index.js",
   "type": "module",
